syntax = "proto3";

import "user.proto";
import "suggestion.proto";
import "user_history.proto";

package neva.backend;

service Backend {
  rpc Register(RegisterRequest) returns (GenericReply) {
  }

  rpc Login(LoginRequest) returns (LoginReply) {
  }

  rpc SuggestionItemProposition(SuggestionItemPropositionRequest)
      returns (GenericReply) {
  }

  rpc GetSuggestion(GetSuggestionRequest) returns (GetSuggestionReply) {
  }

  rpc TagProposition(TagPropositionRequest) returns (GenericReply) {
  }

  rpc TagValueProposition(TagValuePropositionRequest) returns (GenericReply) {
  }

  rpc GetSuggestionItemList(GetSuggestionItemListRequest)
      returns (GetSuggestionItemListReply) {
  }

  rpc InformUserChoice(InformUserChoiceRequest) returns (GenericReply) {
  }
}

message GenericReply {
}

message RegisterRequest {
  User user = 1;
}

message LoginRequest {
  enum AuthenticationType {
    INVALID = 0;
    DEFAULT = 1;
    FACEBOOK = 2;
  };

  string email = 1;
  string password = 2;
  AuthenticationType authentication_type = 3;
}

message LoginReply {
  // Authentication token to be used in upcoming requests.
  bytes token = 1;
}

message SuggestionItemPropositionRequest {
  // Session key for the user proposing the item.
  bytes token = 1;

  // Holds information on propositions category and name.
  Suggestion suggestion = 2;
}

message GetSuggestionRequest {
  // Session key for the user requesting a suggestion.
  bytes token = 1;

  // Category for which the user requests a suggestion.
  Suggestion.SuggestionCategory suggestion_category = 2;
}

message GetSuggestionReply {
  // Name of the suggested item.
  string name = 1;
}

message TagPropositionRequest {
  // Session key for the user proposing the tag.
  bytes token = 1;

  // Holds name for proposed tag.
  string tag = 2;
}

message TagValuePropositionRequest {
  // Session key for the user proposing the tag.
  bytes token = 1;

  // Holds id of the tag.
  uint32 tag_id = 2;

  // Holds id of the suggestion item.
  uint32 suggestee_id = 3;

  // Holds value for the tag if appropriate.
  string value = 4;
}

message GetSuggestionItemListRequest {
  // Session key for the user requesting item list.
  bytes token = 1;

  // Category for which the user requesting items.
  Suggestion.SuggestionCategory suggestion_category = 2;

  // Start index to fetch items.
  uint32 start_index = 3;
}

message GetSuggestionItemListReply {
  // Item names in the database.
  repeated Suggestion items = 1;
}

message InformUserChoiceRequest {
  // Session key for the user informing about request.
  bytes token = 1;

  // Choice of the user.
  Choice choice = 2;
}
